--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,9 @@ h3{
 }
 
 p{
-    font-family: cursive;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
     line-height: 2;
-    font-weight: bold;
 }
 
 hr{
