--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h3{
 
 p{
     font-family: Arial, Helvetica, sans-serif;
-    font-style: italic;
+    font-weight: bold;
     line-height: 2;
 }
 
