--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ h3{
 }
 
 p{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: cursive;
     font-weight: bold;
     line-height: 2;
 }
